# redbull

./: .gitignore  Cargo.toml  LICENSE  README.md  package.sh  release.sh
.github/workflows/: release.yml
Casks/: redbull.rb
assets/: AppIcon.icns  gen_icon.rs  og.html  pack_icns.py
docs/: index.html  robots.txt  sitemap.xml
src/: main.rs
