[package]
name = "redbull"
version = "0.2.4"
edition = "2021"
description = "A minimal menu-bar app that keeps your Mac awake (wraps caffeinate)."

[[bin]]
name = "redbull"
path = "src/main.rs"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString", "NSData", "NSGeometry", "NSTimer", "NSDate", "NSThread",
    "NSArray", "NSValue", "NSDictionary",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication", "NSResponder", "NSView", "NSControl", "NSCell",
    "NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSImage",
    "NSPopover", "NSViewController", "NSGraphics", "NSWindow", "NSFont",
] }
objc2-web-kit = { version = "0.3", features = [
    "WKWebView", "WKWebViewConfiguration", "WKUserContentController",
    "WKScriptMessageHandler", "WKScriptMessage",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
